--- a/GlobalProject/GlobalProject/GlobalProject.vcxproj.filters
+++ b/GlobalProject/GlobalProject/GlobalProject.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Funcs.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
