--- a/GlobalProject/GlobalProject/GlobalProject.vcxproj
+++ b/GlobalProject/GlobalProject/GlobalProject.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Funcs.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
