--- a/GlobalProject/GlobalProject/GlobalProject.vcxproj.filters
+++ b/GlobalProject/GlobalProject/GlobalProject.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Funcs.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Funcs.h">
